--- a/.github/workflows/ecs-deploy-server.yml
+++ b/.github/workflows/ecs-deploy-server.yml
@@ -27,6 +27,7 @@
 name: Deploy Server to Amazon ECS
 
 on:
+  workflow_dispatch:
   push:
     branches: [ "main" ]
     paths:
@@ -77,7 +78,7 @@ jobs:
         docker build --target production -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
-      working-directory: ./server
+      working-directory: ./backend
 
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
