--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -20,6 +20,7 @@ WORKDIR /app
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package*.json ./
 COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/config.json ./
 
 # Copy SSL certificate for RDS
 RUN wget https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem
