--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -21,6 +21,7 @@ COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package*.json ./
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/config.json ./
+COPY --from=builder /app/public ./public
 
 # Copy SSL certificate for RDS
 RUN wget https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem
