--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,15 +12,9 @@ services:
     command: sh -c "npm install && npm run start:dev"
     ports:
       - "3000:3000"
-    environment:
-      - DB_HOST=mongodb://mongo:27027/geo
-      - NODE_ENV=development
-      - PORT=3000
-      - BATCH_ENABLED=true
-      - SPONT_PROMPTS=12
-      - DIRECT_PROMPTS=12
-      - COMP_PROMPTS=8
-      - CONCURRENCY_LIMIT=5
+    env_file:
+      - .env
+
     depends_on:
       - mongo
 
