--- a/backend/package.json
+++ b/backend/package.json
@@ -52,38 +52,48 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.0",
     "@nestjs/event-emitter": "^3.0.1",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mongoose": "^11.0.3",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.0",
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/serve-static": "^5.0.3",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/throttler": "^6.4.0",
+    "@react-email/components": "0.0.40",
     "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
     "cheerio": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "date-fns": "^3.6.0",
     "langchain": "^0.3.24",
     "mongoose": "^8.14.2",
     "nest-winston": "^1.10.2",
     "openai": "^4.98.0",
     "p-limit": "^6.2.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-email": "4.0.13",
     "react-router-dom": "^6.22.3",
     "reflect-metadata": "^0.2.2",
+    "resend": "4.2.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
-    "zod": "^3.24.4",
-    "resend": "4.2.0",
-    "react-email": "4.0.13",
-    "@react-email/components": "0.0.40",
-    "date-fns": "^3.6.0"
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.7",
     "@nestjs/testing": "^11.1.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.17",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.22",
     "@types/react-router-dom": "^5.3.3",
