--- a/.github/workflows/ecs-deploy-public-frontend.yml
+++ b/.github/workflows/ecs-deploy-public-frontend.yml
@@ -24,7 +24,7 @@
 #    See the documentation for each action used below for the recommended IAM policies for this IAM user,
 #    and best practices on handling the access key credentials.
 
-name: Deploy Server to Amazon ECS
+name: Deploy Frontend to Amazon ECS
 
 on:
   workflow_dispatch:
