--- a/backend/config.json
+++ b/backend/config.json
@@ -4,6 +4,7 @@
       "id": "openai-gpt4o",
       "provider": "OpenAI",
       "model": "gpt-4o",
+      "name": "GPT-4o",
       "enabled": true,
       "parameters": {
         "temperature": 0.7,
@@ -15,6 +16,7 @@
       "id": "anthropic-claude3.7sonnet",
       "provider": "Anthropic",
       "model": "claude-3-7-sonnet-20250219",
+      "name": "Claude 3.7 Sonnet",
       "enabled": true,
       "parameters": {
         "temperature": 0.7,
@@ -26,6 +28,7 @@
       "id": "perplexity-sonar-pro",
       "provider": "Perplexity",
       "model": "sonar-pro",
+      "name": "Perplexity Sonar Pro",
       "enabled": true,
       "parameters": {
         "temperature": 0.7,
