Update default LLM provider and add langgraph dependency
Switched the default LLM provider for identity card analysis from Anthropic to Perplexity. Added the `@langchain/langgraph` package to dependencies to support advanced language graph functionalities.

--- a/backend/package.json
+++ b/backend/package.json
@@ -42,6 +42,7 @@
     "@langchain/community": "^0.3.43",
     "@langchain/core": "^0.3.56",
     "@langchain/google-genai": "^0.2.9",
+    "@langchain/langgraph": "^0.2.72",
     "@langchain/mistralai": "^0.2.0",
     "@langchain/openai": "^0.5.10",
     "@mui/icons-material": "^7.1.0",
