Remove unused `bundle.js` from the repository
The `backend/public/static/js/bundle.js` file was deleted as it appears to be unnecessary and potentially auto-generated. This helps reduce repository size and prevent accidentally committing build artifacts, ensuring cleaner version control.

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "build": "npm run build:backend && npm run build:frontend",
     "build:backend": "nest build",
     "build:frontend": "webpack --config webpack.config.js",
+    "build:clean": "rimraf dist public/static/js public/index.html && npm run build",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "start": "nest start",
     "start:dev": "concurrently \"nest start --watch\" \"webpack --watch --config webpack.config.js\"",
@@ -101,11 +102,13 @@
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
+    "clean-webpack-plugin": "^4.0.0",
     "concurrently": "^9.1.2",
     "css-loader": "^7.1.2",
     "dotenv": "^16.5.0",
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.5",
+    "html-webpack-plugin": "^5.6.3",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
