--- a/backend/package.json
+++ b/backend/package.json
@@ -58,10 +58,12 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.1",
+    "@nestjs/platform-socket.io": "^11.1.1",
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/serve-static": "^5.0.3",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/throttler": "^6.4.0",
+    "@nestjs/websockets": "^11.1.1",
     "@react-email/components": "0.0.41",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
@@ -83,6 +85,8 @@
     "react-router-dom": "^7.6.0",
     "reflect-metadata": "^0.2.2",
     "resend": "4.5.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "zod": "^3.24.4"
