Remove report email implementation details document
The document detailing the implementation of report email functionality was removed, likely due to changes in project scope or completed integration into the codebase. Future references to implementation should rely on inline code documentation or newly updated resources.

--- a/backend/config.json
+++ b/backend/config.json
@@ -25,6 +25,18 @@
       }
     },
     {
+      "id": "google-gemini2.0",
+      "provider": "Google",
+      "model": "gemini-2.0-flash",
+      "name": "Gemini 2.0 Flash",
+      "enabled": true,
+      "parameters": {
+        "temperature": 0.7,
+        "maxTokens": 500,
+        "systemPrompt": "You are Gemini, a helpful AI assistant created by Google."
+      }
+    },
+    {
       "id": "perplexity-sonar-pro",
       "provider": "Perplexity",
       "model": "sonar-pro",
