--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
-    "@types/jest": "^29.5.14"
+    "@tailwindcss/postcss": "^4.1.7",
+    "@types/jest": "^29.5.14",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7"
   }
 }
