Refactor plans functionality and integrate dynamic pricing.
Replaces hardcoded pricing plans with dynamic API-driven plans. Introduces reusable `PricingCard` component and error/loading states. Updates `date` field naming for consistency and improves checkout logic with user authentication and context.

--- a/backend/config.json
+++ b/backend/config.json
@@ -87,5 +87,12 @@
     "spontaneous": 150,
     "sentiment": 100,
     "comparison": 80
+  },
+  "retryConfig": {
+    "maxRetries": 3,
+    "baseDelayMs": 1000,
+    "maxDelayMs": 30000,
+    "backoffFactor": 2.0,
+    "description": "Retry configuration for LLM API calls when rate limited"
   }
 }
