--- a/backend/package.json
+++ b/backend/package.json
@@ -87,6 +87,7 @@
     "resend": "4.5.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "stripe": "^18.1.1",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "zod": "^3.24.4"
