--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
   },
   "homepage": "https://github.com/Coach86/geo#readme",
   "dependencies": {
+    "@ai-sdk/xai": "^1.2.16",
     "@anthropic-ai/sdk": "^0.51.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -65,6 +66,7 @@
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/websockets": "^11.1.1",
     "@react-email/components": "0.0.41",
+    "ai": "^4.3.16",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "cheerio": "^1.0.0",
