--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.7"
+  },
+  "dependencies": {
+    "@ai-sdk/xai": "^1.2.16",
+    "ai": "^4.3.16"
   }
 }
