--- a/backend/package.json
+++ b/backend/package.json
@@ -67,6 +67,8 @@
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/websockets": "^11.1.1",
     "@react-email/components": "0.0.41",
+    "@types/uuid": "^10.0.0",
+    "@xenova/transformers": "^2.17.2",
     "ai": "^4.3.16",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
@@ -74,8 +76,12 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "date-fns": "^4.1.0",
+    "hnswlib-node": "^3.0.0",
+    "js-search": "^2.0.1",
     "langchain": "^0.3.26",
+    "lunr": "^2.3.9",
     "mongoose": "^8.14.3",
+    "natural": "^8.1.0",
     "nest-winston": "^1.10.2",
     "openai": "^4.98.0",
     "p-limit": "^6.2.0",
@@ -101,6 +107,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
+    "@types/lunr": "^2.3.7",
     "@types/node": "^22.15.18",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
