--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,7 +48,7 @@
     "framer-motion": "12.14.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.511.0",
-  "next": "15.2.4",
+    "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19",
     "react-day-picker": "8.10.1",
@@ -60,6 +60,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "socket.io-client": "^4.8.1",
     "vaul": "^1.1.2",
     "zod": "^3.25.30"
   },
