--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
     "test:brand-insight": "./run-test.sh",
     "setup": "npm run build",
     "create:admin": "ts-node scripts/create-admin-user.ts",
-    "migrate:organizations": "ts-node scripts/migrate-to-organizations.ts"
+    "migrate:organizations": "ts-node scripts/migrate-to-organizations.ts",
+    "normalize:urls": "ts-node scripts/normalize-project-urls.ts"
   },
   "repository": {
     "type": "git",
