--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,13 @@
-FROM node:20-alpine AS builder
+FROM node:20-slim AS builder
+
+# Install Python and build dependencies for native modules
+RUN apt-get update && apt-get install -y \
+    python3 \
+    make \
+    g++ \
+    build-essential \
+    libvips-dev \
+    && rm -rf /var/lib/apt/lists/*
 
 RUN npm i -g @nestjs/cli
 
@@ -6,13 +15,23 @@ WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm ci
+# Install dependencies with platform-specific builds
+RUN npm ci --ignore-scripts
 
 COPY . .
 
+# Rebuild all native modules including nested dependencies
+RUN npm rebuild --verbose
+
 RUN npm run build
 
-FROM node:20-alpine
+FROM node:20-slim
+
+# Install wget for downloading SSL certificates and libraries required by sharp
+RUN apt-get update && apt-get install -y \
+    wget \
+    libvips42 \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
