--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,7 +9,7 @@ services:
     volumes:
       - ./backend:/app
       - /app/node_modules
-    command: sh -c "npm install && npm run start:dev"
+    command: sh -c "npm ci && npm rebuild && npm run start:dev"
     ports:
       - "3002:3000"
     env_file:
