--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,8 @@
     "@radix-ui/react-toggle": "1.1.9",
     "@radix-ui/react-toggle-group": "1.1.10",
     "@radix-ui/react-tooltip": "1.2.7",
+    "@tanstack/react-table": "^8.21.3",
+    "@tanstack/react-virtual": "^3.13.10",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -48,7 +50,7 @@
     "framer-motion": "12.14.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.511.0",
-  "next": "15.2.4",
+    "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19",
     "react-day-picker": "8.10.1",
