Remove Accuracy and Comparison pipelines and associated prompts
- Deleted `AccuracyPipelineService`, `ComparisonPipelineService`, and all related interfaces and methods.
- Removed `accuracy-prompts.ts` and `brand-battle-prompts.ts` files.
- Cleaned up references to accuracy and brand battle features throughout the codebase.
- Updated configurations and services to remove

--- a/backend/config.json
+++ b/backend/config.json
@@ -156,7 +156,7 @@
     }
   ],
   "analyzerConfig": {
-    "spontaneous": {
+    "visibility": {
       "runsPerModel": 1,
       "fallback": {
         "provider": "Anthropic",
@@ -177,7 +177,17 @@
         "model": "gpt-4o"
       }
     },
-    "comparison": {
+    "alignment": {
+      "fallback": {
+        "provider": "Anthropic",
+        "model": "claude-3-7-sonnet-20250219"
+      },
+      "primary": {
+        "provider": "OpenAI",
+        "model": "gpt-4o"
+      }
+    },
+    "competition": {
       "fallback": {
         "provider": "Anthropic",
         "model": "claude-3-7-sonnet-20250219"
@@ -190,9 +200,10 @@
   },
   "concurrencyLimit": 100,
   "pipelineLimits": {
-    "spontaneous": 150,
+    "visibility": 150,
     "sentiment": 100,
-    "comparison": 80
+    "alignment": 80,
+    "competition": 80
   },
   "retryConfig": {
     "maxRetries": 3,
