--- a/backend/package.json
+++ b/backend/package.json
@@ -83,6 +83,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "posthog-node": "^5.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-email": "4.0.13",
