--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -21,6 +21,8 @@ RUN npm install -g pnpm
 
 ENV NODE_ENV=production
 ENV NEXT_PUBLIC_API_URL=https://api.getmint.ai/api
+ENV NEXT_PUBLIC_POSTHOG_KEY=phc_iNSRIwgW553mS6cI4rBvjMX0pisqkBeXGYvkm4kraft
+ENV NEXT_PUBLIC_POSTHOG_HOST=https://eu.i.posthog.com
 
 # Copy only the necessary files for production
 COPY --from=builder /app/next.config.mjs ./
