--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,8 @@
     "lucide-react": "^0.511.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "posthog-js": "^1.250.2",
+    "posthog-node": "^5.0.0",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
