Add "perplexity-sonar-pro" to default models list in backend config

--- a/backend/config.json
+++ b/backend/config.json
@@ -215,6 +215,7 @@
   "defaultModels": [
     "openai-gpt4o",
     "anthropic-claude-4-sonnet",
-    "google-gemini2.0"
+    "google-gemini2.0",
+    "perplexity-sonar-pro"
   ]
 }
