Implement Docker optimization, update dependencies, and refine feature logic
- Added `.dockerignore` to reduce Docker build context size.
- Refactored `Dockerfile` for multi-stage builds, optimized production image and runtime configuration.
- Enhanced `PostHogProvider` to skip initialization in development for faster testing.
- Updated Stripe API version and dependency versions in `pnpm-lock.yaml`.
- Improved analytics tracking by skipping events in development mode with logs for visibility.
- Excluded 'unknown' keywords in the explorer

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,31 +1,55 @@
-FROM node:20-alpine AS builder
+# Base stage with common OS layer
+FROM node:20-alpine AS base
 
-RUN npm i -g @nestjs/cli
-
+# Stage 1: Install dependencies
+FROM base AS dependencies
 WORKDIR /app
-
 COPY package*.json ./
-
+COPY .npmrc ./
 RUN npm ci
 
+# Stage 2: Build application
+FROM base AS builder
+WORKDIR /app
+COPY package*.json ./
+COPY .npmrc ./
+COPY --from=dependencies /app/node_modules ./node_modules
 COPY . .
-
 RUN npm run build
 
-FROM node:20-alpine
+# Stage 3: Production dependencies only
+FROM base AS prod-dependencies
+WORKDIR /app
+COPY package*.json ./
+COPY .npmrc ./
+RUN npm ci --only=production && \
+    npm cache clean --force
 
+# Stage 4: Final runtime
+FROM base AS runtime
 WORKDIR /app
 
+# Install dumb-init for proper signal handling
+RUN apk add --no-cache dumb-init
 
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/package*.json ./
-COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/config.json ./
-COPY --from=builder /app/public ./public
+# Create non-root user
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S nodejs -u 1001
 
-# Copy SSL certificate for RDS
-RUN wget https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem
+# Copy only production dependencies and built application
+COPY --from=prod-dependencies --chown=nodejs:nodejs /app/node_modules ./node_modules
+COPY --from=builder --chown=nodejs:nodejs /app/dist ./dist
+COPY --chown=nodejs:nodejs package*.json ./
+COPY --chown=nodejs:nodejs config.json ./
+COPY --chown=nodejs:nodejs public ./public
+
+# Download SSL certificate for RDS
+RUN wget -O /app/global-bundle.pem https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem && \
+    chown nodejs:nodejs /app/global-bundle.pem
+
+USER nodejs
 
 EXPOSE 3000
 
+ENTRYPOINT ["dumb-init", "--"]
 CMD ["node", "dist/main.js"]
