Introduce subscription flow enhancements and gated feature access
- Added gated premium feature components: `FeatureBlurOverlay` and `FeatureLockedWrapper`.
- Enhanced free plan capabilities and restrictions throughout the application.
- Introduced `FeatureAccessProvider` for centralized feature gating logic.
- Implemented celebratory confetti and toasts for subscription upgrades.
- Adjusted `PricingPage` to handle free plan activation and onboarding redirection.
- Updated batch processing to handle visibility-only mode for free plans.
- Integrated plan-specific checks and UI adjustments in project settings and analysis flows.

--- a/backend/config.json
+++ b/backend/config.json
@@ -215,7 +215,6 @@
   "defaultModels": [
     "openai-gpt4o",
     "anthropic-claude-4-sonnet",
-    "google-gemini2.0",
-    "perplexity-sonar-pro"
+    "google-gemini2.0"
   ]
 }
