--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "posthog-js": "^1.250.2",
     "posthog-node": "^5.0.0",
     "react": "^19",
+    "react-confetti": "^6.4.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
