--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,6 +62,7 @@
     "react-intersection-observer": "9.16.0",
     "react-resizable-panels": "^3.0.2",
     "recharts": "2.15.3",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
