--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,10 @@ DEEPSEEK_API_KEY=your-deepseek-key
 GROK_API_KEY=your-grok-key
 LLAMA_API_KEY=your-llama-key
 MISTRAL_API_KEY=your-mistral-key
+
+# Shopify Integration
+SHOPIFY_API_KEY=your-shopify-api-key
+SHOPIFY_API_SECRET=your-shopify-api-secret
+SHOPIFY_WEBHOOK_SECRET=your-shopify-webhook-secret
+SHOPIFY_ACCESS_TOKEN=your-shopify-access-token
+SHOPIFY_API_VERSION=2024-01
