--- a/backend/package.json
+++ b/backend/package.json
@@ -91,6 +91,7 @@
     "react-router-dom": "^7.6.2",
     "reflect-metadata": "^0.2.2",
     "resend": "4.6.0",
+    "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "stripe": "^18.2.1",
