Add support for visibility-only report generation and improve error handling
- Introduced `createVisibilityOnlyReport` method to generate reports for free plan users with visibility-focused data.
- Enhanced components and tabs with conditional guards for missing data to prevent errors.
- Adjusted handling of `averageAttributeScores` in Accuracy and Spontaneous tabs to ensure fallback logic.
- Fixed batch service to

--- a/backend/config.json
+++ b/backend/config.json
@@ -214,7 +214,7 @@
   },
   "defaultModels": [
     "openai-gpt4o",
-    "anthropic-claude-4-sonnet",
-    "google-gemini2.0"
+    "google-gemini2.0",
+    "anthropic-claude-4-sonnet"
   ]
 }
