--- a/backend/config.json
+++ b/backend/config.json
@@ -56,7 +56,7 @@
       "provider": "Anthropic",
       "model": "claude-3-7-sonnet-20250219",
       "name": "Claude 3.7 Sonnet",
-      "enabled": false,
+      "enabled": true,
       "webAccess": true,
       "parameters": {
         "temperature": 0.7,
@@ -69,7 +69,7 @@
       "provider": "Anthropic",
       "model": "claude-sonnet-4-20250514",
       "name": "Claude 4 Sonnet",
-      "enabled": true,
+      "enabled": false,
       "webAccess": true,
       "parameters": {
         "temperature": 0.7,
@@ -215,6 +215,6 @@
   "defaultModels": [
     "openai-gpt4o",
     "google-gemini2.0",
-    "anthropic-claude-4-sonnet"
+    "anthropic-claude3.7sonnet"
   ]
 }
