--- a/backend/config.json
+++ b/backend/config.json
@@ -69,7 +69,7 @@
       "provider": "Anthropic",
       "model": "claude-sonnet-4-20250514",
       "name": "Claude 4 Sonnet",
-      "enabled": false,
+      "enabled": true,
       "webAccess": true,
       "parameters": {
         "temperature": 0.7,
