Add Perplexity Sonar Pro model and organization-wide email notifications for reports
- Replaced Anthropic Claude 3.7 Sonnet with Perplexity Sonar Pro in default models.
- Integrated organization-wide email notifications for completed reports using `EventEmitter2`.
- Introduced `ReportCompletedEvent` and enhanced `BrandReportOrchestrator

--- a/backend/config.json
+++ b/backend/config.json
@@ -215,6 +215,6 @@
   "defaultModels": [
     "openai-gpt4o",
     "google-gemini2.0",
-    "anthropic-claude3.7sonnet"
+    "perplexity-sonar-pro"
   ]
 }
