--- a/backend/config.json
+++ b/backend/config.json
@@ -58,6 +58,7 @@
       "name": "Claude 3.7 Sonnet",
       "enabled": true,
       "webAccess": true,
+      "premium": true,
       "parameters": {
         "temperature": 0.7,
         "maxTokens": 500,
@@ -71,6 +72,7 @@
       "name": "Claude 4 Sonnet",
       "enabled": true,
       "webAccess": true,
+      "premium": true,
       "parameters": {
         "temperature": 0.7,
         "maxTokens": 500,
@@ -84,6 +86,7 @@
       "name": "Claude 4 Opus",
       "enabled": false,
       "webAccess": true,
+      "premium": true,
       "parameters": {
         "temperature": 0.7,
         "maxTokens": 500,
