--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,9 @@ GROK_API_KEY=your-grok-key
 LLAMA_API_KEY=your-llama-key
 MISTRAL_API_KEY=your-mistral-key
 
+# Email Services
+LOOPS_API_KEY=your-loops-api-key
+
 # Shopify Integration
 SHOPIFY_API_KEY=your-shopify-api-key
 SHOPIFY_API_SECRET=your-shopify-api-secret
