--- a/backend/package.json
+++ b/backend/package.json
@@ -77,6 +77,7 @@
     "class-validator": "^0.14.2",
     "date-fns": "^4.1.0",
     "langchain": "^0.3.29",
+    "loops": "^5.0.1",
     "mongoose": "^8.16.0",
     "nest-winston": "^1.10.2",
     "openai": "^5.6.0",
@@ -115,8 +116,8 @@
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
     "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^7.1.2",
     "concurrently": "^9.2.0",
+    "css-loader": "^7.1.2",
     "dotenv": "^16.5.0",
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.5",
