Update API tags and integrate enhanced batch processing
- Updated `@ApiTags` across controllers for consistent categorization (e.g., `Admin`, `User`, `Public`).
- Added enhanced data aggregation for visibility and explorer reports, including competitor data and prompt testing stats.
- Created new `useProjectBatchStatus` hook and `BatchStatusIndicator` component for frontend batch status tracking.
- Refined `ProcessingLoader` UI with onboarding video support.
- Improved domain source analyses and reporting features in backend aggregators.
- Updated sidebar navigation for improved clarity.

--- a/backend/config.json
+++ b/backend/config.json
@@ -58,6 +58,7 @@
       "name": "Claude 3.7 Sonnet",
       "enabled": true,
       "webAccess": true,
+      "maxWebSearches": 1,
       "premium": true,
       "parameters": {
         "temperature": 0.7,
@@ -72,6 +73,7 @@
       "name": "Claude 4 Sonnet",
       "enabled": true,
       "webAccess": true,
+      "maxWebSearches": 1,
       "premium": true,
       "parameters": {
         "temperature": 0.7,
@@ -86,6 +88,7 @@
       "name": "Claude 4 Opus",
       "enabled": false,
       "webAccess": true,
+      "maxWebSearches": 1,
       "premium": true,
       "parameters": {
         "temperature": 0.7,
