--- a/backend/package.json
+++ b/backend/package.json
@@ -92,6 +92,7 @@
     "react-router-dom": "^7.6.2",
     "reflect-metadata": "^0.2.2",
     "resend": "4.6.0",
+    "robots-parser": "^3.0.1",
     "rxjs": "^7.8.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
