--- a/backend/package.json
+++ b/backend/package.json
@@ -69,6 +69,7 @@
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/websockets": "^11.1.3",
     "@react-email/components": "0.0.42",
+    "@types/jsdom": "^21.1.7",
     "ai": "^4.3.16",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
@@ -76,6 +77,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "date-fns": "^4.1.0",
+    "jsdom": "^25.0.0",
     "langchain": "^0.3.29",
     "loops": "^5.0.1",
     "mongoose": "^8.16.0",
