Remove onboarding confirmation components and related logic
- Deleted `AddWebsiteButton`, `ConfigurationDetails`, `ConfigurationNavigation`, and other sub-components under `confirmation`.
- Removed onboarding confirmation constants, utilities, and types.
- Eliminated references to `confirmation` in onboarding directory and refactored to simplify the onboarding flow.

--- a/backend/config.json
+++ b/backend/config.json
@@ -221,6 +221,8 @@
   "defaultModels": [
     "openai-gpt4o",
     "google-gemini2.0",
-    "perplexity-sonar-pro"
+    "perplexity-sonar-pro",
+    "mistral-medium-2505",
+    "grok-3-latest"
   ]
 }
