--- a/backend/package.json
+++ b/backend/package.json
@@ -69,12 +69,15 @@
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/websockets": "^11.1.3",
     "@react-email/components": "0.0.42",
+    "@types/xml2js": "^0.4.14",
     "ai": "^4.3.16",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "cheerio": "^1.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "csv-parser": "^3.2.0",
+    "csv-writer": "^1.6.0",
     "date-fns": "^4.1.0",
     "jsdom": "^25.0.1",
     "langchain": "^0.3.29",
@@ -100,6 +103,7 @@
     "stripe": "^18.2.1",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
+    "xml2js": "^0.6.2",
     "zod": "^3.25.67"
   },
   "devDependencies": {
