Update assets and improve error tracing in visibility tests
- Updated `main` script hash in `index.html` for asset revision.
- Renamed LLM model `mistral-medium-2505` to `mistral-medium` in `config.json`.
- Enhanced `test-visibility-standalone.js` by incorporating

--- a/backend/config.json
+++ b/backend/config.json
@@ -222,7 +222,7 @@
     "openai-gpt4o",
     "google-gemini2.0",
     "perplexity-sonar-pro",
-    "mistral-medium-2505",
+    "mistral-medium",
     "grok-3-latest"
   ]
 }
