--- a/backend/package.json
+++ b/backend/package.json
@@ -50,6 +50,7 @@
     "@langchain/mistralai": "^0.2.1",
     "@langchain/openai": "^0.5.15",
     "@mistralai/mistralai": "^1.7.2",
+    "@mozilla/readability": "^0.6.0",
     "@mui/icons-material": "^7.1.2",
     "@mui/lab": "^7.0.0-beta.14",
     "@mui/material": "^7.1.2",
@@ -69,6 +70,8 @@
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/websockets": "^11.1.3",
     "@react-email/components": "0.0.42",
+    "@types/marked": "^5.0.2",
+    "@types/turndown": "^5.0.5",
     "@types/xml2js": "^0.4.14",
     "ai": "^4.3.16",
     "axios": "^1.10.0",
@@ -84,6 +87,7 @@
     "jsdom": "^25.0.1",
     "langchain": "^0.3.29",
     "loops": "^5.0.1",
+    "marked": "^16.0.0",
     "mongoose": "^8.16.0",
     "nest-winston": "^1.10.2",
     "openai": "^5.6.0",
@@ -103,6 +107,7 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "stripe": "^18.2.1",
+    "turndown": "^7.2.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "xml2js": "^0.6.2",
