--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@mozilla/readability": "^0.6.0",
     "@radix-ui/react-accordion": "1.2.11",
     "@radix-ui/react-alert-dialog": "1.1.14",
     "@radix-ui/react-aspect-ratio": "1.1.7",
@@ -41,15 +42,20 @@
     "@radix-ui/react-tooltip": "1.2.7",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.10",
+    "@types/dompurify": "^3.2.0",
+    "@types/marked": "^6.0.0",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "diff": "^8.0.2",
+    "dompurify": "^3.2.6",
     "embla-carousel-react": "8.6.0",
     "framer-motion": "12.14.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.511.0",
+    "marked": "^16.0.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "posthog-js": "^1.250.2",
@@ -70,6 +76,7 @@
     "zod": "^3.25.30"
   },
   "devDependencies": {
+    "@types/diff": "^8.0.0",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
