"Implement rule aggregator, page analyzer, crawler, and database modules for content scoring system"
- Added `RuleAggregator` for calculating weighted average scores across multiple dimensions.
- Introduced `BaseRule` for standardized rule evaluation and score generation.
- Developed `analyzeWithRules` in `RuleEngine` to process content against all rule sets (technical, content, authority, and quality).
- Built `PageAnalyzer` to generate scores and aggregated results for analyzed pages.
- Implemented `Crawler` to retrieve and process URLs with metadata extraction, normalization, and caching.
- Set up SQLite-based `Database` module for efficient storage and management of crawled data, scores, and discovered URLs.

--- a/backend/package.json
+++ b/backend/package.json
@@ -111,7 +111,7 @@
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "xml2js": "^0.6.2",
-    "zod": "^3.25.67"
+    "zod": "^3.25.75"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.7",
@@ -129,6 +129,7 @@
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
+    "better-sqlite3": "^11.10.0",
     "clean-webpack-plugin": "^4.0.0",
     "concurrently": "^9.2.0",
     "css-loader": "^7.1.2",
