"Implement rule aggregator, page analyzer, crawler, and database modules for content scoring system"
- Added `RuleAggregator` for calculating weighted average scores across multiple dimensions.
- Introduced `BaseRule` for standardized rule evaluation and score generation.
- Developed `analyzeWithRules` in `RuleEngine` to process content against all rule sets (technical, content, authority, and quality).
- Built `PageAnalyzer` to generate scores and aggregated results for analyzed pages.
- Implemented `Crawler` to retrieve and process URLs with metadata extraction, normalization, and caching.
- Set up SQLite-based `Database` module for efficient storage and management of crawled data, scores, and discovered URLs.

--- a/.gitignore
+++ b/.gitignore
@@ -48,4 +48,4 @@ prisma/dev.db-journal
 /backend/public/
 backend/public/index.html
 
-/backend/scripts/data/visibility-results-*
+/backend/scripts/data/
