--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "npm run build:backend && npm run build:frontend",
-    "build:backend": "node --max-old-space-size=8192 ./node_modules/@nestjs/cli/bin/nest.js build",
+    "build:backend": "nest build",
     "build:frontend": "webpack --config webpack.config.js",
     "build:clean": "rimraf dist public/static/js public/index.html && npm run build",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
@@ -20,11 +20,11 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:brand-insight": "./run-test.sh",
     "setup": "npm run build",
     "create:admin": "ts-node scripts/create-admin-user.ts",
-    "migrate:organizations": "ts-node scripts/migrate-to-organizations.ts",
-    "normalize:urls": "ts-node scripts/normalize-project-urls.ts"
+    "lint:scripts": "./scripts/lint-all.sh",
+    "check:syntax": "node scripts/check-js-syntax.js",
+    "test:rules": "node scripts/test-all-rules.js"
   },
   "repository": {
     "type": "git",
@@ -38,22 +38,22 @@
   },
   "homepage": "https://github.com/Coach86/geo#readme",
   "dependencies": {
-    "@ai-sdk/xai": "^1.2.16",
-    "@anthropic-ai/sdk": "^0.54.0",
+    "@ai-sdk/xai": "^1.2.17",
+    "@anthropic-ai/sdk": "^0.56.0",
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@langchain/anthropic": "^0.3.23",
-    "@langchain/community": "^0.3.47",
-    "@langchain/core": "^0.3.61",
-    "@langchain/google-genai": "^0.2.13",
-    "@langchain/langgraph": "^0.3.4",
+    "@emotion/styled": "^11.14.1",
+    "@langchain/anthropic": "^0.3.24",
+    "@langchain/community": "^0.3.48",
+    "@langchain/core": "^0.3.62",
+    "@langchain/google-genai": "^0.2.14",
+    "@langchain/langgraph": "^0.3.6",
     "@langchain/mistralai": "^0.2.1",
-    "@langchain/openai": "^0.5.15",
-    "@mistralai/mistralai": "^1.7.2",
+    "@langchain/openai": "^0.5.18",
+    "@mistralai/mistralai": "^1.7.3",
     "@mozilla/readability": "^0.6.0",
-    "@mui/icons-material": "^7.1.2",
+    "@mui/icons-material": "^7.2.0",
     "@mui/lab": "^7.0.0-beta.14",
-    "@mui/material": "^7.1.2",
+    "@mui/material": "^7.2.0",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.1.3",
     "@nestjs/config": "^4.0.2",
@@ -70,9 +70,6 @@
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/websockets": "^11.1.3",
     "@react-email/components": "0.0.42",
-    "@types/marked": "^5.0.2",
-    "@types/turndown": "^5.0.5",
-    "@types/xml2js": "^0.4.14",
     "ai": "^4.3.16",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
@@ -88,9 +85,9 @@
     "langchain": "^0.3.29",
     "loops": "^5.0.1",
     "marked": "^16.0.0",
-    "mongoose": "^8.16.0",
+    "mongoose": "^8.16.1",
     "nest-winston": "^1.10.2",
-    "openai": "^5.6.0",
+    "openai": "^5.8.2",
     "p-limit": "^6.2.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -106,7 +103,7 @@
     "rxjs": "^7.8.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "stripe": "^18.2.1",
+    "stripe": "^18.3.0",
     "turndown": "^7.2.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
@@ -116,29 +113,38 @@
   "devDependencies": {
     "@nestjs/cli": "^11.0.7",
     "@nestjs/testing": "^11.1.3",
+    "@swc/cli": "^0.7.7",
+    "@swc/core": "^1.12.9",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.3",
     "@types/jest": "^29.5.14",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^24.0.3",
+    "@types/node": "^24.0.10",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/supertest": "^6.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
+    "@types/turndown": "^5.0.5",
+    "@types/xml2js": "^0.4.14",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
     "better-sqlite3": "^11.10.0",
     "clean-webpack-plugin": "^4.0.0",
     "concurrently": "^9.2.0",
     "css-loader": "^7.1.2",
-    "dotenv": "^16.5.0",
+    "dotenv": "^17.0.1",
+    "esbuild": "^0.25.5",
+    "esbuild-node-externals": "^1.18.0",
+    "esbuild-plugin-tsc": "^0.5.0",
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.5",
+    "glob": "^11.0.3",
     "html-webpack-plugin": "^5.6.3",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "madge": "^8.0.0",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "style-loader": "^4.0.0",
@@ -149,6 +155,7 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3",
     "webpack": "^5.99.9",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1"
   }
 }
