--- a/backend/package.json
+++ b/backend/package.json
@@ -81,6 +81,7 @@
     "date-fns": "^4.1.0",
     "google-auth-library": "^10.1.0",
     "googleapis": "^150.0.1",
+    "html-validate": "^9.7.1",
     "jsdom": "^25.0.1",
     "langchain": "^0.3.29",
     "loops": "^5.0.1",
