--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "typecheck": "tsc --noEmit",
+    "check-all": "npm run typecheck && npm run lint",
     "export": "next build && next export",
     "export:run": "next export"
   },
