--- a/backend/package.json
+++ b/backend/package.json
@@ -94,6 +94,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "posthog-node": "^5.1.1",
+    "psl": "^1.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-email": "4.0.16",
