Add core modules for recommendations and batch report generation:
- Introduced `BaseAnalyzer` with confidence and impact score calculations, multilingual support, and market detection logic.
- Created `BatchReportGenerationService` to generate and persist visibility-only and full reports with metadata extraction, prompt counting, and analysis trigger events.
- Added `CurrentOrganization` decorator for extracting organization ID from API requests.
- Developed a new frontend page for managing "Feature Gap" recommendations with dynamic filtering, confidence/impact metrics, and action triggers.

--- a/backend/config.json
+++ b/backend/config.json
@@ -1,6 +1,19 @@
 {
   "llmModels": [
     {
+      "id": "openai-gpt4o-search",
+      "provider": "OpenAI",
+      "model": "gpt-4o-search-preview",
+      "name": "GPT-4o-Search",
+      "enabled": false,
+      "webAccess": true,
+      "parameters": {
+        "temperature": 0.7,
+        "maxTokens": 500,
+        "systemPrompt": "You are a helpful assistant providing clear, factual information."
+      }
+    },
+    {
       "id": "openai-gpt4-1",
       "provider": "OpenAI",
       "model": "gpt-4.1-2025-04-14",
